Bug #45457
CEPH Graylog Logging Missing "host" Field
0%
Description
Hello,
I have tried sending CEPH logs to Graylog with the following configuration:
mon_cluster_log_to_graylog = true
mon_cluster_log_to_graylog host = 10.50.100.70
mon_cluster_log_to_graylog port = 12202
The logs in the server.log entries in Graylog is showing:
2020-05-09T20:28:26.063-06:00 ERROR [DecodingProcessor] Error processing message RawMessage{id=ed6876e1-9265-11ea-bc94-1ad2db8b5489, journalOffset=5055367, codec=gelf, payloadSize=317, timestamp=2020-05-10T02:28:26.062Z, remoteAddress=/10.10.10.12:36509}
java.lang.IllegalArgumentException: GELF message <ed6876e1-9265-11ea-bc94-1ad2db8b5489> (received from <10.10.10.12:36509>) has empty mandatory "host" field.
There does not appear to be any other options that can be enabled for Graylog logging in CEPH, not sure what else to try.
Related issues
History
#1 Updated by Nathan Cutler over 3 years ago
- Related to Cleanup #23551: Inconsistent graylog option naming added
#2 Updated by Kefu Chai over 2 years ago
- Tracker changed from Support to Bug
- Project changed from Ceph to RADOS
- Category deleted (
Monitor) - Status changed from New to Fix Under Review
- Assignee set to Kefu Chai
- Tags set to octopus, pacific
- Regression set to No
- Severity set to 3 - minor
- Pull request ID set to 42175
#3 Updated by Kefu Chai over 2 years ago
- Status changed from Fix Under Review to Pending Backport
#4 Updated by Jan-Philipp Litza almost 2 years ago
So is this going to be backported to Pacific?
#5 Updated by Konstantin Shalygin over 1 year ago
- Tags deleted (
octopus, pacific) - Backport set to octopus pacific
#6 Updated by Konstantin Shalygin over 1 year ago
- Copied to Backport #55791: pacific: CEPH Graylog Logging Missing "host" Field added
#7 Updated by Konstantin Shalygin over 1 year ago
- Copied to Backport #55792: octopus: CEPH Graylog Logging Missing "host" Field added
#8 Updated by Backport Bot over 1 year ago
- Tags set to backport_processed