log: set hostname and fsid for graylog

in which, hostname is mandatory per
https://docs.graylog.org/en/4.0/pages/gelf.html#gelf-payload-specification,
so without this change, if user enables `log_to_graylog` and/or `err_to_graylog`,
failures like

java.lang.IllegalArgumentException: GELF message <ed6876e1-9265-11ea-bc94-1ad2db8b5489> (received from <10.10.10.12:36509>) has empty mandatory "host" field.

is expected.

after this change, this field is set.

Fixes: https://tracker.ceph.com/issues/45457
Signed-off-by: Kefu Chai <kchai@redhat.com>